--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,7 +4,7 @@
   height: 100vh;
   min-height: 720px;
   max-height: 800px;
-  padding: 30px 80px 40px 30px;
+  padding: 30px 0 40px;
   position: relative;
   box-sizing: border-box;
   background: url(../images/background_header.svg) no-repeat 0 0 #fff;
@@ -59,7 +59,7 @@
   box-sizing: border-box;
   justify-content: space-between;
   align-items: flex-end;
-  margin: auto 0 0 80px;
+  margin: auto 80px 0;
   z-index: 1;
 }
 
