--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -6,13 +6,14 @@
 .nav__logo {
   width: 105px;
   height: 39px;
+  margin: 0 0 0 30px;
 }
 
 .nav__links {
   display: flex;
   align-content: center;
   padding: 0;
-  margin: 0;
+  margin: 0 80px 0 0;
   list-style-type: none;
   gap: 20px;
 }
