--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,6 +1,7 @@
 .recipes {
   display: flex;
   flex-direction: column;
+  align-content: flex-start;
   background: url(../images/background_recipes.svg) no-repeat 0 0 #0a2750;
   background-size: cover;
   padding: 100px 0 215px 80px;
@@ -8,7 +9,7 @@
 
 .recipes__title {
   max-width: 580px;
-  margin: 0 auto 24px 0;
+  margin: 0 0 24px 0;
   color: #fff;
   font-size: 44px;
   line-height: 52px;
@@ -17,7 +18,7 @@
 
 .recipes__subtitle {
   max-width: 438px;
-  margin: 0 auto 80px 0;
+  margin: 0 0 80px 0;
   color: #fff;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
